[project]
name = "vquant"
version = "0.1.0"
description = "A quantitative research library for factor and signal analysis"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
readme = "README.md"
keywords = ["quantitative", "finance", "factors", "signals", "research"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
]
requires-python = ">=3.9"
dependencies = [
    "polars>=0.20.0",        # For efficient data handling
    "pyarrow>=12.0.0",       # For Parquet I/O
    "numpy>=1.23.0",         # For numerical computations
    "matplotlib>=3.7.0",     # For visualization
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",         # For unit testing
    "black>=23.7.0",         # For code formatting
    "flake8>=6.1.0",         # For linting
    "mypy>=1.5.0",           # For static type checking
]
docs = [
    "sphinx>=7.0.0",         # For documentation
    "sphinx-rtd-theme>=1.3.0", # ReadTheDocs theme
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vquant"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]